--- a/filus.properties
+++ b/filus.properties
@@ -1,13 +1,21 @@
 #Filus Crawler by Hypothermic
 #Please note that fThreads-count is (still) hardcoded.
+#Set control passwd in plain text, and restrict reading this file to root and the java user!!
+#Please do not enable fControlTest if fProxyTest is disabled.
 #https://github.com/hypothermic
 #https://www.hypothermic.nl
-#Mon Jan 01 20:16:51 CET 2018
-rqAgent=Filus
-fProxyTest-enable=1
-fThreads-count=2
+#Tue Jan 02 19:17:27 CET 2018
+fProxyTest-addr=http\://www.neverssl.com
 torProxy-addr=127.0.0.1
-fProxyTest-addr=http://neverssl.com
+fThreads-count=2
+fControlTest-addr=http\://checkip.amazonaws.com/
+torControl-addr=127.0.0.1
+fControlTest-enable=1
+fControlTest-addr-failover=http\://icanhazip.com/
 filusDebug=1
+rqHeader=MyHeader
 torProxy-port=9052
-rqHeader=Filus
+rqAgent=MyUserAgent
+torControl-port=9053
+torControl-passwd=mygreatpassword
+fProxyTest-enable=1
