--- a/filus.properties
+++ b/filus.properties
@@ -1,21 +1,24 @@
 #Filus Crawler by Hypothermic
-#Please note that fThreads-count is (still) hardcoded.
+#More info about this file in README.md
 #Set control passwd in plain text, and restrict reading this file to root and the java user!!
 #Please do not enable fControlTest if fProxyTest is disabled.
 #https://github.com/hypothermic
 #https://www.hypothermic.nl
-#Tue Jan 02 19:17:27 CET 2018
+#Wed Jan 03 18:19:35 CET 2018
 fProxyTest-addr=http\://www.neverssl.com
 torProxy-addr=127.0.0.1
-fThreads-count=2
+fThreads-count=8
 fControlTest-addr=http\://checkip.amazonaws.com/
+fControlTest-connTimeout=30000
 torControl-addr=127.0.0.1
 fControlTest-enable=1
+fConnTimeout=15000
 fControlTest-addr-failover=http\://icanhazip.com/
 filusDebug=1
-rqHeader=MyHeader
+rqHeader=wwwDOTgithubDOTcomSLASHhypothermicSLASHfilus
 torProxy-port=9052
-rqAgent=MyUserAgent
+rqAgent=Filus
 torControl-port=9053
 torControl-passwd=mygreatpassword
+fProxyTest-connTimeout=30000
 fProxyTest-enable=1
