--- a/filus.properties
+++ b/filus.properties
@@ -4,21 +4,24 @@
 #Please do not enable fControlTest if fProxyTest is disabled.
 #https://github.com/hypothermic
 #https://www.hypothermic.nl
-#Wed Jan 03 18:19:35 CET 2018
-fProxyTest-addr=http\://www.neverssl.com
-torProxy-addr=127.0.0.1
-fThreads-count=8
-fControlTest-addr=http\://checkip.amazonaws.com/
-fControlTest-connTimeout=30000
-torControl-addr=127.0.0.1
-fControlTest-enable=1
+#Thu Jan 04 19:27:28 CET 2018
 fConnTimeout=15000
+fControlTest-addr=http\://checkip.amazonaws.com/
 fControlTest-addr-failover=http\://icanhazip.com/
-filusDebug=1
-rqHeader=wwwDOTgithubDOTcomSLASHhypothermicSLASHfilus
-torProxy-port=9052
-rqAgent=Filus
-torControl-port=9053
-torControl-passwd=mygreatpassword
+fControlTest-connTimeout=30000
+fControlTest-enable=1
+fProxyTest-addr=http\://www.neverssl.com
 fProxyTest-connTimeout=30000
 fProxyTest-enable=1
+fThreads-count=8
+fWebMonitor-addr=127.0.0.1
+fWebMonitor-enable=1
+fWebMonitor-port=80
+filusDebug=1
+rqAgent=FS
+rqHeader=wwwDOTgithubDOTcomSLASHhypothermicSLASHfilus
+torControl-addr=127.0.0.1
+torControl-passwd=mygreatpassword
+torControl-port=9053
+torProxy-addr=127.0.0.1
+torProxy-port=9052
