--- a/filus.properties
+++ b/filus.properties
@@ -18,10 +18,10 @@ fWebMonitor-addr=127.0.0.1
 fWebMonitor-enable=1
 fWebMonitor-port=80
 filusDebug=1
-rqAgent=FS
-rqHeader=wwwDOTgithubDOTcomSLASHhypothermicSLASHfilus
+rqAgent=MyUserAgent
+rqHeader=MyHeader
 torControl-addr=127.0.0.1
-torControl-passwd=mygreatpassword
+torControl-passwd=MyGreatPassword
 torControl-port=9053
 torProxy-addr=127.0.0.1
 torProxy-port=9052
